// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QC Segment Creation Context Menu renders QcSegmentCreationContextMenuContent 1`] = `
<div>
  <div
    class="form qc-segment-form"
  >
    <div
      class="form__header"
    >
      <div>
        Create QC Segment
      </div>
      <div
        class="form__header-decoration"
      >
        <div>
          <div
            class="qc-segment-swatch"
            style="background-color: rgb(235, 6, 200);"
          />
          <span
            class="qc-segment-swatch-label"
          >
            Analyst Defined
          </span>
        </div>
      </div>
    </div>
    <div
      class="form"
    >
      <div
        class="form-content"
      >
        <div
          class="dialog-item__label "
        >
          Category
        </div>
        <div
          class="dialog-item__value "
        >
          Analyst Defined
        </div>
        <div
          class="dialog-item__label "
        >
          Type
        </div>
        <div
          class="dialog-item__value "
        >
          <div
            class="dropdown-container"
          >
            <span
              class="dropdown-selector"
              data-cy="-dropdown"
            >
              <div
                class="bp4-html-select full-width"
              >
                <select
                  title="Select a QC segment type"
                >
                  <option>
                    Select a QC segment type
                  </option>
                  <option
                    value="AGGREGATE"
                  >
                    Aggregate
                  </option>
                  <option
                    value="CALIBRATION"
                  >
                    Calibration
                  </option>
                  <option
                    value="FLAT"
                  >
                    Flat
                  </option>
                  <option
                    value="GAP"
                  >
                    Gap
                  </option>
                  <option
                    value="NOISY"
                  >
                    Noisy
                  </option>
                  <option
                    value="SENSOR_PROBLEM"
                  >
                    Sensor Problem
                  </option>
                  <option
                    value="SPIKE"
                  >
                    Spike
                  </option>
                  <option
                    value="STATION_PROBLEM"
                  >
                    Station Problem
                  </option>
                  <option
                    value="STATION_SECURITY"
                  >
                    Station Security
                  </option>
                  <option
                    value="TIMING"
                  >
                    Timing
                  </option>
                </select>
                <span
                  class="bp4-icon bp4-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    aria-labelledby="iconTitle-0"
                    data-icon="double-caret-vertical"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title
                      id="iconTitle-0"
                    >
                      Open dropdown
                    </title>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </span>
          </div>
        </div>
        <div
          class="dialog-item__label "
        >
          Channel name
        </div>
        <div
          class="dialog-item__value "
        >
          <div
            class="form__text--wrap"
            title=""
          />
        </div>
        <div
          class="dialog-item__label dialog-item__label--required"
        >
          Start time
        </div>
        <div
          class="dialog-item__value monospace"
        >
          <div
            class="time-picker"
          >
            <div
              class="bp4-input-group time-picker__input-group--fill"
            >
              <input
                class="bp4-input time-picker__input"
                inputmode="text"
                type="text"
                value="2021-11-10T00:16:45.000"
              />
            </div>
            <button
              class="bp4-button time-picker__date-picker-button"
              title="Choose a date and time"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp4-icon bp4-icon-calendar"
                icon="calendar"
              >
                <svg
                  data-icon="calendar"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="dialog-item__label dialog-item__label--required"
        >
          End time
        </div>
        <div
          class="dialog-item__value monospace"
        >
          <div
            class="time-picker"
          >
            <div
              class="bp4-input-group time-picker__input-group--fill"
            >
              <input
                class="bp4-input time-picker__input"
                inputmode="text"
                type="text"
                value="2021-11-10T01:06:43.000"
              />
            </div>
            <button
              class="bp4-button time-picker__date-picker-button"
              title="Choose a date and time"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp4-icon bp4-icon-calendar"
                icon="calendar"
              >
                <svg
                  data-icon="calendar"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="dialog-item__label "
        >
          Author
        </div>
        <div
          class="dialog-item__value "
        />
        <div
          class="dialog-item__label "
        >
          Rejected
        </div>
        <div
          class="dialog-item__value "
        >
          False
        </div>
        <div
          class="dialog-item__label "
        >
          Rationale
        </div>
        <div
          class="dialog-item__value "
        >
          <div>
            <textarea
              class="form__text-input"
              data-cy="textarea"
              maxlength="160"
              rows="4"
              style="width: 100%;"
              title="Rationale"
            />
            <p
              class="form__character-count"
            >
              Characters remaining: 
              160
            </p>
          </div>
        </div>
      </div>
      <div
        class="qc-segment-form__message"
      >
        <div
          class="form-message form-message--danger"
        >
          <span
            class="form-message__summary"
          >
            <span
              aria-hidden="true"
              class="bp4-icon bp4-icon-error bp4-intent-danger"
              icon="error"
            >
              <svg
                data-icon="error"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            No data in selected channels
          </span>
          <span
            class="form-message__recommendation"
          >
            There is no data to mask in the selected time range for channels: PDAR.PD01.SHZ.
          </span>
        </div>
      </div>
      <div
        class="form__buttons"
      >
        <div
          class="form__buttons--right"
        >
          <button
            class="bp4-button bp4-disabled bp4-intent-danger bp4-button form__button"
            disabled=""
            tabindex="-1"
            title="No data in selected channels"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp4-icon bp4-icon-floppy-disk"
              icon="floppy-disk"
            >
              <svg
                data-icon="floppy-disk"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M15.71 2.29l-2-2A.997.997 0 0013 0h-1v6H4V0H1C.45 0 0 .45 0 1v14c0 .55.45 1 1 1h14c.55 0 1-.45 1-1V3c0-.28-.11-.53-.29-.71zM14 15H2V9c0-.55.45-1 1-1h10c.55 0 1 .45 1 1v6zM11 1H9v4h2V1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp4-button-text"
            >
              Save
            </span>
          </button>
          <button
            class="bp4-button bp4-button form__button"
            type="submit"
          >
            <span
              class="bp4-button-text"
            >
              <span
                class="bp4-button-text"
              >
                Cancel
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QC Segment Creation Context Menu renders QcSegmentCreationMenuContextMenuContent 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form qc-segment-form"
      >
        <div
          class="form__header"
        >
          <div>
            Create QC Segment
          </div>
          <div
            class="form__header-decoration"
          >
            <div>
              <div
                class="qc-segment-swatch"
                style="background-color: rgb(235, 6, 200);"
              />
              <span
                class="qc-segment-swatch-label"
              >
                Analyst Defined
              </span>
            </div>
          </div>
        </div>
        <div
          class="form"
        >
          <div
            class="form-content"
          >
            <div
              class="dialog-item__label "
            >
              Category
            </div>
            <div
              class="dialog-item__value "
            >
              Analyst Defined
            </div>
            <div
              class="dialog-item__label "
            >
              Type
            </div>
            <div
              class="dialog-item__value "
            >
              <div
                class="dropdown-container"
              >
                <span
                  class="dropdown-selector"
                  data-cy="-dropdown"
                >
                  <div
                    class="bp4-html-select full-width"
                  >
                    <select
                      title="Select a QC segment type"
                    >
                      <option>
                        Select a QC segment type
                      </option>
                      <option
                        value="AGGREGATE"
                      >
                        Aggregate
                      </option>
                      <option
                        value="CALIBRATION"
                      >
                        Calibration
                      </option>
                      <option
                        value="FLAT"
                      >
                        Flat
                      </option>
                      <option
                        value="GAP"
                      >
                        Gap
                      </option>
                      <option
                        value="NOISY"
                      >
                        Noisy
                      </option>
                      <option
                        value="SENSOR_PROBLEM"
                      >
                        Sensor Problem
                      </option>
                      <option
                        value="SPIKE"
                      >
                        Spike
                      </option>
                      <option
                        value="STATION_PROBLEM"
                      >
                        Station Problem
                      </option>
                      <option
                        value="STATION_SECURITY"
                      >
                        Station Security
                      </option>
                      <option
                        value="TIMING"
                      >
                        Timing
                      </option>
                    </select>
                    <span
                      class="bp4-icon bp4-icon-double-caret-vertical"
                      icon="double-caret-vertical"
                    >
                      <svg
                        aria-labelledby="iconTitle-5"
                        data-icon="double-caret-vertical"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <title
                          id="iconTitle-5"
                        >
                          Open dropdown
                        </title>
                        <path
                          d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="dialog-item__label "
            >
              Channel name
            </div>
            <div
              class="dialog-item__value "
            >
              <div
                class="form__text--wrap"
                title=""
              />
            </div>
            <div
              class="dialog-item__label dialog-item__label--required"
            >
              Start time
            </div>
            <div
              class="dialog-item__value monospace"
            >
              <div
                class="time-picker"
              >
                <div
                  class="bp4-input-group time-picker__input-group--fill"
                >
                  <input
                    class="bp4-input time-picker__input"
                    inputmode="text"
                    type="text"
                    value="2021-11-10T00:16:45.000"
                  />
                </div>
                <button
                  class="bp4-button time-picker__date-picker-button"
                  title="Choose a date and time"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp4-icon bp4-icon-calendar"
                    icon="calendar"
                  >
                    <svg
                      data-icon="calendar"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="dialog-item__label dialog-item__label--required"
            >
              End time
            </div>
            <div
              class="dialog-item__value monospace"
            >
              <div
                class="time-picker"
              >
                <div
                  class="bp4-input-group time-picker__input-group--fill"
                >
                  <input
                    class="bp4-input time-picker__input"
                    inputmode="text"
                    type="text"
                    value="2021-11-10T01:06:43.000"
                  />
                </div>
                <button
                  class="bp4-button time-picker__date-picker-button"
                  title="Choose a date and time"
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    class="bp4-icon bp4-icon-calendar"
                    icon="calendar"
                  >
                    <svg
                      data-icon="calendar"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="dialog-item__label "
            >
              Author
            </div>
            <div
              class="dialog-item__value "
            />
            <div
              class="dialog-item__label "
            >
              Rejected
            </div>
            <div
              class="dialog-item__value "
            >
              False
            </div>
            <div
              class="dialog-item__label "
            >
              Rationale
            </div>
            <div
              class="dialog-item__value "
            >
              <div>
                <textarea
                  class="form__text-input"
                  data-cy="textarea"
                  maxlength="160"
                  rows="4"
                  style="width: 100%;"
                  title="Rationale"
                />
                <p
                  class="form__character-count"
                >
                  Characters remaining: 
                  160
                </p>
              </div>
            </div>
          </div>
          <div
            class="qc-segment-form__message"
          >
            <div
              class="form-message form-message--danger"
            >
              <span
                class="form-message__summary"
              >
                <span
                  aria-hidden="true"
                  class="bp4-icon bp4-icon-error bp4-intent-danger"
                  icon="error"
                >
                  <svg
                    data-icon="error"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                No data in selected channels
              </span>
              <span
                class="form-message__recommendation"
              >
                There is no data to mask in the selected time range for channels: PDAR.PD01.SHZ.
              </span>
            </div>
          </div>
          <div
            class="form__buttons"
          >
            <div
              class="form__buttons--right"
            >
              <button
                class="bp4-button bp4-disabled bp4-intent-danger bp4-button form__button"
                disabled=""
                tabindex="-1"
                title="No data in selected channels"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp4-icon bp4-icon-floppy-disk"
                  icon="floppy-disk"
                >
                  <svg
                    data-icon="floppy-disk"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M15.71 2.29l-2-2A.997.997 0 0013 0h-1v6H4V0H1C.45 0 0 .45 0 1v14c0 .55.45 1 1 1h14c.55 0 1-.45 1-1V3c0-.28-.11-.53-.29-.71zM14 15H2V9c0-.55.45-1 1-1h10c.55 0 1 .45 1 1v6zM11 1H9v4h2V1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp4-button-text"
                >
                  Save
                </span>
              </button>
              <button
                class="bp4-button bp4-button form__button"
                type="submit"
              >
                <span
                  class="bp4-button-text"
                >
                  <span
                    class="bp4-button-text"
                  >
                    Cancel
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form qc-segment-form"
    >
      <div
        class="form__header"
      >
        <div>
          Create QC Segment
        </div>
        <div
          class="form__header-decoration"
        >
          <div>
            <div
              class="qc-segment-swatch"
              style="background-color: rgb(235, 6, 200);"
            />
            <span
              class="qc-segment-swatch-label"
            >
              Analyst Defined
            </span>
          </div>
        </div>
      </div>
      <div
        class="form"
      >
        <div
          class="form-content"
        >
          <div
            class="dialog-item__label "
          >
            Category
          </div>
          <div
            class="dialog-item__value "
          >
            Analyst Defined
          </div>
          <div
            class="dialog-item__label "
          >
            Type
          </div>
          <div
            class="dialog-item__value "
          >
            <div
              class="dropdown-container"
            >
              <span
                class="dropdown-selector"
                data-cy="-dropdown"
              >
                <div
                  class="bp4-html-select full-width"
                >
                  <select
                    title="Select a QC segment type"
                  >
                    <option>
                      Select a QC segment type
                    </option>
                    <option
                      value="AGGREGATE"
                    >
                      Aggregate
                    </option>
                    <option
                      value="CALIBRATION"
                    >
                      Calibration
                    </option>
                    <option
                      value="FLAT"
                    >
                      Flat
                    </option>
                    <option
                      value="GAP"
                    >
                      Gap
                    </option>
                    <option
                      value="NOISY"
                    >
                      Noisy
                    </option>
                    <option
                      value="SENSOR_PROBLEM"
                    >
                      Sensor Problem
                    </option>
                    <option
                      value="SPIKE"
                    >
                      Spike
                    </option>
                    <option
                      value="STATION_PROBLEM"
                    >
                      Station Problem
                    </option>
                    <option
                      value="STATION_SECURITY"
                    >
                      Station Security
                    </option>
                    <option
                      value="TIMING"
                    >
                      Timing
                    </option>
                  </select>
                  <span
                    class="bp4-icon bp4-icon-double-caret-vertical"
                    icon="double-caret-vertical"
                  >
                    <svg
                      aria-labelledby="iconTitle-5"
                      data-icon="double-caret-vertical"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title
                        id="iconTitle-5"
                      >
                        Open dropdown
                      </title>
                      <path
                        d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
              </span>
            </div>
          </div>
          <div
            class="dialog-item__label "
          >
            Channel name
          </div>
          <div
            class="dialog-item__value "
          >
            <div
              class="form__text--wrap"
              title=""
            />
          </div>
          <div
            class="dialog-item__label dialog-item__label--required"
          >
            Start time
          </div>
          <div
            class="dialog-item__value monospace"
          >
            <div
              class="time-picker"
            >
              <div
                class="bp4-input-group time-picker__input-group--fill"
              >
                <input
                  class="bp4-input time-picker__input"
                  inputmode="text"
                  type="text"
                  value="2021-11-10T00:16:45.000"
                />
              </div>
              <button
                class="bp4-button time-picker__date-picker-button"
                title="Choose a date and time"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp4-icon bp4-icon-calendar"
                  icon="calendar"
                >
                  <svg
                    data-icon="calendar"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="dialog-item__label dialog-item__label--required"
          >
            End time
          </div>
          <div
            class="dialog-item__value monospace"
          >
            <div
              class="time-picker"
            >
              <div
                class="bp4-input-group time-picker__input-group--fill"
              >
                <input
                  class="bp4-input time-picker__input"
                  inputmode="text"
                  type="text"
                  value="2021-11-10T01:06:43.000"
                />
              </div>
              <button
                class="bp4-button time-picker__date-picker-button"
                title="Choose a date and time"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp4-icon bp4-icon-calendar"
                  icon="calendar"
                >
                  <svg
                    data-icon="calendar"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="dialog-item__label "
          >
            Author
          </div>
          <div
            class="dialog-item__value "
          />
          <div
            class="dialog-item__label "
          >
            Rejected
          </div>
          <div
            class="dialog-item__value "
          >
            False
          </div>
          <div
            class="dialog-item__label "
          >
            Rationale
          </div>
          <div
            class="dialog-item__value "
          >
            <div>
              <textarea
                class="form__text-input"
                data-cy="textarea"
                maxlength="160"
                rows="4"
                style="width: 100%;"
                title="Rationale"
              />
              <p
                class="form__character-count"
              >
                Characters remaining: 
                160
              </p>
            </div>
          </div>
        </div>
        <div
          class="qc-segment-form__message"
        >
          <div
            class="form-message form-message--danger"
          >
            <span
              class="form-message__summary"
            >
              <span
                aria-hidden="true"
                class="bp4-icon bp4-icon-error bp4-intent-danger"
                icon="error"
              >
                <svg
                  data-icon="error"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              No data in selected channels
            </span>
            <span
              class="form-message__recommendation"
            >
              There is no data to mask in the selected time range for channels: PDAR.PD01.SHZ.
            </span>
          </div>
        </div>
        <div
          class="form__buttons"
        >
          <div
            class="form__buttons--right"
          >
            <button
              class="bp4-button bp4-disabled bp4-intent-danger bp4-button form__button"
              disabled=""
              tabindex="-1"
              title="No data in selected channels"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp4-icon bp4-icon-floppy-disk"
                icon="floppy-disk"
              >
                <svg
                  data-icon="floppy-disk"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M15.71 2.29l-2-2A.997.997 0 0013 0h-1v6H4V0H1C.45 0 0 .45 0 1v14c0 .55.45 1 1 1h14c.55 0 1-.45 1-1V3c0-.28-.11-.53-.29-.71zM14 15H2V9c0-.55.45-1 1-1h10c.55 0 1 .45 1 1v6zM11 1H9v4h2V1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp4-button-text"
              >
                Save
              </span>
            </button>
            <button
              class="bp4-button bp4-button form__button"
              type="submit"
            >
              <span
                class="bp4-button-text"
              >
                <span
                  class="bp4-button-text"
                >
                  Cancel
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
